--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-key-responder": "0.2.1",
     "ember-modal-dialog": "0.3.0",
     "ember-new-computed": "1.0.0",
-    "ember-radio-button": "1.0.4"
+    "ember-radio-button": "1.0.4",
+    "liquid-fire": "0.19.4"
   }
 }
