--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
-    "ember-cli-github-pages": "0.0.4",
+    "ember-cli-github-pages": "https://github.com/truenorth/ember-cli-github-pages.git#build-env",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
