--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-modal-dialog": "0.3.0",
     "ember-new-computed": "1.0.0",
     "ember-radio-button": "1.0.4",
+    "ember-try": "0.0.5",
     "liquid-fire": "0.19.4"
   }
 }
