--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
 matrix:
   fast_finish: true
   allow_failures:
+  - env: EMBER_TRY_SCENARIO=ember-release
   - env: EMBER_TRY_SCENARIO=ember-beta
   - env: EMBER_TRY_SCENARIO=ember-canary
 
@@ -42,6 +43,8 @@ script:
 - ember try $EMBER_TRY_SCENARIO test
 
 after_success:
+- git remote add deploy https://$GH_TOKEN:x-oauth-basic@github.com/truenorth/truenorth.github.io.git
+- git fetch deploy
 - git checkout --orphan master
 - ember github-pages:commit --message "New release" --branch=master --environment=development
-- git push https://$GH_TOKEN:x-oauth-basic@github.com/truenorth/truenorth.github.io.git master
+- git push deploy master
