--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ install:
 script:
 - ember try $EMBER_TRY_SCENARIO test
 
-after_success:
+deploy:
 - rm -rf travis-phantomjs
 - git remote add deploy https://$GH_TOKEN:x-oauth-basic@github.com/truenorth/truenorth.github.io.git
 - git fetch deploy
