--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "truenorth",
   "dependencies": {
-    "ember": "1.12.0",
+    "ember": "beta",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-data": "1.0.0-beta.17",
@@ -12,9 +12,10 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
-    "materialize": "~0.96.0"
+    "materialize": "~0.96.1"
   },
   "resolutions": {
-    "jquery": "^1.11.1"
+    "jquery": "^1.11.1",
+    "ember": "beta"
   }
 }
