--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-materialize": "0.13.7",
+    "ember-cli-materialize": "truenorth/ember-cli-materialize#tabs-bugfix",
     "ember-cli-qunit": "0.3.13",
     "ember-cli-sass": "3.3.1",
     "ember-cli-uglify": "^1.0.1",
