--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "truenorth",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Small description for truenorth goes here",
   "private": true,
   "directories": {
@@ -19,28 +19,28 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "0.2.5",
-    "ember-cli-app-version": "0.3.3",
-    "ember-cli-babel": "^5.0.0",
+    "broccoli-asset-rev": "^2.1.2",
+    "ember-cli": "1.13.8",
+    "ember-cli-app-version": "0.5.0",
+    "ember-cli-babel": "^5.1.3",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-dependency-checker": "^1.0.1",
     "ember-cli-font-awesome": "0.0.9",
-    "ember-cli-github-pages": "truenorth/ember-cli-github-pages#branch-as-argument",
-    "ember-cli-htmlbars": "0.7.6",
-    "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-materialize": "truenorth/ember-cli-materialize#tabs-bugfix",
-    "ember-cli-qunit": "0.3.13",
-    "ember-cli-sass": "3.3.1",
-    "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.17",
-    "ember-disable-proxy-controllers": "^0.7.0",
-    "ember-export-application-global": "^1.0.2",
-    "ember-key-responder": "0.2.1",
-    "ember-modal-dialog": "0.3.0",
-    "ember-new-computed": "1.0.0",
-    "ember-radio-button": "1.0.4",
+    "ember-cli-github-pages": "^0.0.1",
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-cli-ic-ajax": "0.2.1",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-materialize": "~0.17.4",
+    "ember-cli-qunit": "^1.0.0",
+    "ember-cli-sass": "^3.3.1",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-composability": "0.0.6",
+    "ember-disable-proxy-controllers": "^1.0.0",
+    "ember-export-application-global": "^1.0.3",
+    "ember-key-responder": "^0.2.1",
+    "ember-modal-dialog": "^0.7.7",
+    "ember-new-computed": "^1.0.2",
+    "ember-radio-button": "^1.0.4",
     "ember-try": "0.0.5",
     "liquid-fire": "~0.20.0"
   }
