--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-dependency-checker": "^1.0.1",
     "ember-cli-font-awesome": "0.0.9",
     "ember-cli-github-pages": "^0.0.1",
+    "ember-data": "1.13.8",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.1",
