--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,6 @@ sudo: false
 cache:
   directories:
   - node_modules
-env:
-  matrix:
-  - EMBER_TRY_SCENARIO=default
-  - EMBER_TRY_SCENARIO=ember-release
-  - EMBER_TRY_SCENARIO=ember-beta
-
-matrix:
-  fast_finish: true
-  allow_failures:
-    - env: EMBER_TRY_SCENARIO=ember-canary
 
 branches:
   only:
@@ -35,6 +25,6 @@ install:
 - bower install
 
 script:
-- ember try $EMBER_TRY_SCENARIO test
+- ember test ci
 
 
