--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.20.0",
-    "material-design-lite": "~1.0.4"
+    "material-design-lite": "~1.0.4",
+    "moment": ">= 2.8.0",
+    "moment-timezone": ">= 0.1.0"
   },
   "resolutions": {
     "ember": "release",
