--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "^2.2.0",
     "ember-cli": "1.13.12",
     "ember-cli-app-version": "^1.0.0",
+    "ember-cli-autoprefixer": "^0.5.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.1.0",
@@ -29,19 +30,22 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-moment-shim": "0.7.1",
     "ember-cli-qunit": "^1.0.4",
     "ember-cli-release": "0.2.8",
-    "ember-cli-sass": "3.3.1",
+    "ember-cli-sass": "^4.2.1",
     "ember-cli-sri": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-composability": "0.2.1",
+    "ember-composability": "^0.2.1",
     "ember-data": "1.13.15",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
-    "ember-legacy-views": "0.2.0",
-    "ember-material-lite": "0.1.13",
-    "ember-new-computed": "1.0.3",
-    "ember-truth-helpers": "1.1.0",
+    "ember-google-map": "mike-north/ember-google-map#master",
+    "ember-legacy-views": "^0.2.0",
+    "ember-material-lite": "0.1.14",
+    "ember-moment": "4.1.0",
+    "ember-new-computed": "^1.0.3",
+    "ember-truth-helpers": "^1.2.0",
     "liquid-fire": "0.21.3"
   }
 }
