--- a/.travis.yml
+++ b/.travis.yml
@@ -43,5 +43,5 @@ after_success:
 # Generate the github pages. When this command is finished I'll be on "master" branch with a
 # new commit already made (but not pushed)
 # Push the new commit
-- /bin/bash lib/try-generate-pages.sh
+- /bin/bash lib/try-deploy.sh
 - git checkout master
